Fix the impossibility to delete track / edit tag on fresh install